tests/build/cases/ui_node/delegate_expr_error_incorrect_type_child.stderr
error[E0277]: the trait bound `NotANode: UiNode` is not satisfied
 --> cases/ui_node/delegate_expr_error_incorrect_type_child.rs:9:1
  |
9 | #[ui_node(child)]
  | ^^^^^^^^^^^^^^^^^ the trait `UiNode` is not implemented for `NotANode`
  |
  = help: the following other types implement trait `UiNode`:
            <implementers-list>
  = note: this error originates in the attribute macro `ui_node` (in Nightly builds, run with -Z macro-backtrace for more info)
